# Intro2AI_Labs

./: .gitignore  adaboost.py  dataset.py  detection.py  experiment.xlsx  main.py  report.docx
Lab1/: adaboost.py  dataset.py  detection.py  main.py  pyproject.toml
